--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+///font
+@import url("https://fonts.googleapis.com/css2?family=Mukta&display=swap");
+
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+.mukta {
+    font-family: "Mukta", sans-serif;
+}
