--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -100,7 +100,7 @@
     <div class="adminpage" *ngIf="currentDiv=='Admin'">
 
 
-        <mat-card>
+        <mat-card class="cardd">
 
             <div class="df">
 
@@ -176,7 +176,7 @@
     <div class="adminpage" *ngIf="currentDiv=='Co-ordinator'">
 
 
-        <mat-card>
+        <mat-card class="cardd">
 
             <div class="df">
 
@@ -252,7 +252,7 @@
     <div class="adminpage" *ngIf="currentDiv=='Staff'">
 
 
-        <mat-card>
+        <mat-card class="cardd">
 
             <div class="df">
 
@@ -328,7 +328,7 @@
     <div class="adminpage" *ngIf="currentDiv=='Supervisor'">
 
 
-        <mat-card>
+        <mat-card class="cardd">
 
             <div class="df">
 
@@ -404,7 +404,7 @@
     <div class="adminpage" *ngIf="currentDiv=='Evaluator'">
 
 
-        <mat-card>
+        <mat-card class="cardd">
 
             <div class="df">
 
@@ -480,7 +480,7 @@
     <div class="adminpage" *ngIf="currentDiv=='Student'">
 
 
-        <mat-card>
+        <mat-card class="cardd">
 
             <div class="df">
 
