--- a/src/app/main-nav/main-nav.component.scss
+++ b/src/app/main-nav/main-nav.component.scss
@@ -65,6 +65,48 @@ p:hover {
   color: white;
   background: linear-gradient(to right, #516395, #614385);
   font-family: "Mukta", sans-serif;
+  float: right;
+  text-align: right;
+  display: flex;
+  position: relative;
+  z-index: 1;
+  justify-content: right;
+  align-items: center;
+}
+.alignright {
+  padding: 2px;
+  position: relative;
+  left: 95%;
+  display: flex;
+  background-color: white;
+  border-radius: 50%;
+}
+.list {
+  position: fixed;
+  left: 91%;
+  top: 4em;
+  z-index: 5000;
+  background-color: white;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.103), 0 6px 6px rgba(0, 0, 0, 0.103);
+  align-items: center;
+}
+.end {
+  position: relative;
+  left: 95%;
+  display: flex;
+  align-items: center;
+}
+.end:hover {
+  cursor: pointer;
+}
+.avatar {
+  position: relative;
+  top: 3px;
+  height: 1.5em;
+}
+mat-selection-list {
+  padding: 0;
+  margin: 0;
 }
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&display=swap");
