--- a/src/app/createuserform/createuserform.component.html
+++ b/src/app/createuserform/createuserform.component.html
@@ -1,53 +1,76 @@
 <div class="body">
 
-    <div class="closeicon">
-        <mat-icon (click)="close()" style="color:red" matPrefix>cancel</mat-icon>
+    <div *ngIf="!spin">
+        <div class="closeicon">
+            <mat-icon (click)="close()" style="color:red" matPrefix>cancel</mat-icon>
+        </div>
+
+        <img class="logo" src="../../assets/logo.png" alt="">
+        <h1 *ngIf="data">
+            Create {{data.user}}
+        </h1>
+
+        <mat-form-field class="field" color="primary" appearance="outline">
+            <mat-label class="noto">EMAIL</mat-label>
+            <mat-icon matPrefix>mail</mat-icon>
+            <input [(ngModel)]="email" type="text" matInput placeholder="Placeholder">
+
+            <mat-hint *ngIf="error=='email'" style="font-family: Roboto;color: rgba(255, 0, 0, 0.733);">{{errormsg}}
+            </mat-hint>
+        </mat-form-field>
+
+        <mat-form-field class="field" color="primary" appearance="outline">
+            <mat-label class="noto">Password</mat-label>
+            <mat-icon matPrefix>lock</mat-icon>
+            <input [(ngModel)]="password" type="password" matInput placeholder="Placeholder">
+
+            <mat-hint *ngIf="error=='password'" style="font-family: Roboto;color: rgba(255, 0, 0, 0.733);">{{errormsg}}
+            </mat-hint>
+        </mat-form-field>
+
+        <mat-form-field class="field" color="primary" appearance="outline">
+            <mat-label class="noto">Name</mat-label>
+            <mat-icon matPrefix>lock</mat-icon>
+            <input [(ngModel)]="name" type="text" matInput placeholder="Placeholder">
+
+            <mat-hint *ngIf="error=='name'" style="font-family: Roboto;color: rgba(255, 0, 0, 0.733);">{{errormsg}}
+            </mat-hint>
+        </mat-form-field>
+
+        <mat-form-field class="field" color="primary" appearance="outline">
+            <mat-label class="noto">Mobile</mat-label>
+            <mat-icon matPrefix>lock</mat-icon>
+            <input [(ngModel)]="phone" type="number" matInput placeholder="Placeholder">
+
+            <mat-hint *ngIf="error=='phone'" style="font-family: Roboto;color: rgba(255, 0, 0, 0.733);">{{errormsg}}
+            </mat-hint>
+        </mat-form-field>
+
+        <mat-form-field *ngIf="data.user=='Student'" class="field" color="primary" appearance="outline">
+            <mat-label class="noto">Reg No</mat-label>
+            <mat-icon matPrefix>perm_identity</mat-icon>
+            <input [(ngModel)]="regNo" type="text" matInput placeholder="Placeholder">
+
+            <mat-hint *ngIf="error=='regno'" style="font-family: Roboto;color: rgba(255, 0, 0, 0.733);">{{errormsg}}
+            </mat-hint>
+        </mat-form-field>
+
+        <mat-form-field *ngIf="data.user=='Student'" class="field" color="primary" appearance="outline">
+
+            <mat-label>Choose one</mat-label>
+            <mat-icon matPrefix>track_changes</mat-icon>
+            <mat-select matNativeControl [(ngModel)]="choosedShit">
+                <mat-option *ngFor="let item of shifts" [value]="item">{{item}}</mat-option>
+            </mat-select>
+            <mat-hint *ngIf="error=='shift'" style="font-family: Roboto;color: rgba(255, 0, 0, 0.733);">{{errormsg}}
+            </mat-hint>
+
+        </mat-form-field>
+
     </div>
 
-    <img class="logo" src="../../assets/logo.png" alt="">
-    <h1 *ngIf="data">
-        Create {{data.user}}
-    </h1>
+    <mat-progress-spinner *ngIf="spin" class="example-margin" color="primary" mode="indeterminate">
+    </mat-progress-spinner>
 
-    <mat-form-field class="field" color="primary" appearance="outline">
-        <mat-label class="noto">EMAIL</mat-label>
-        <mat-icon matPrefix>mail</mat-icon>
-        <input type="text" matInput placeholder="Placeholder">
-
-        <mat-hint style="font-family: Roboto;color: rgba(255, 0, 0, 0.733);">Enter your valid email</mat-hint>
-    </mat-form-field>
-
-    <mat-form-field class="field" color="primary" appearance="outline">
-        <mat-label class="noto">Password</mat-label>
-        <mat-icon matPrefix>lock</mat-icon>
-        <input type="text" matInput placeholder="Placeholder">
-
-        <mat-hint style="font-family: Roboto;color: rgba(255, 0, 0, 0.733);">Enter your valid email</mat-hint>
-    </mat-form-field>
-
-    <mat-form-field class="field" color="primary" appearance="outline">
-        <mat-label class="noto">Name</mat-label>
-        <mat-icon matPrefix>lock</mat-icon>
-        <input type="text" matInput placeholder="Placeholder">
-
-        <mat-hint style="font-family: Roboto;color: rgba(255, 0, 0, 0.733);">Enter your valid email</mat-hint>
-    </mat-form-field>
-
-    <mat-form-field class="field" color="primary" appearance="outline">
-        <mat-label class="noto">Mobile</mat-label>
-        <mat-icon matPrefix>lock</mat-icon>
-        <input type="text" matInput placeholder="Placeholder">
-
-        <mat-hint style="font-family: Roboto;color: rgba(255, 0, 0, 0.733);">Enter your valid email</mat-hint>
-    </mat-form-field>
-
-    <mat-form-field class="field" color="primary" appearance="outline">
-        <mat-label class="noto">Role</mat-label>
-        <mat-icon matPrefix>lock</mat-icon>
-        <input type="text" matInput placeholder="Placeholder">
-
-        <mat-hint style="font-family: Roboto;color: rgba(255, 0, 0, 0.733);">Enter your valid email</mat-hint>
-    </mat-form-field>
-
-    <button class="btn" mat-flat-button color="primary" (click)="close()">LOGIN</button>
+    <button *ngIf="!spin" class="btn" mat-flat-button color="primary" (click)="validation()">CREATE</button>
 </div>
