--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -168,7 +168,7 @@
                     <td>{{item.timestamp}}</td>
                     <td>{{item.year}}</td>
                     <td style="text-align: center;">
-                        <button color="warn" (click)="manage('Dashboard')" mat-mini-fab>
+                        <button color="warn" (click)="deleteuser(item.userID)" mat-mini-fab>
                             <mat-icon>delete</mat-icon>
                         </button>
                     </td>
@@ -251,7 +251,7 @@
                     <td>{{item.timestamp}}</td>
                     <td>{{item.year}}</td>
                     <td style="text-align: center;">
-                        <button color="warn" (click)="manage('Dashboard')" mat-mini-fab>
+                        <button color="warn" (click)="deleteuser(item.userID)" mat-mini-fab>
                             <mat-icon>delete</mat-icon>
                         </button>
                     </td>
@@ -334,7 +334,7 @@
                     <td>{{item.timestamp}}</td>
                     <td>{{item.year}}</td>
                     <td style="text-align: center;">
-                        <button color="warn" (click)="manage('Dashboard')" mat-mini-fab>
+                        <button color="warn" (click)="deleteuser(item.userID)" mat-mini-fab>
                             <mat-icon>delete</mat-icon>
                         </button>
                     </td>
@@ -417,7 +417,7 @@
                     <td>{{item.timestamp}}</td>
                     <td>{{item.year}}</td>
                     <td style="text-align: center;">
-                        <button color="warn" (click)="manage('Dashboard')" mat-mini-fab>
+                        <button color="warn" (click)="deleteuser(item.userID)" mat-mini-fab>
                             <mat-icon>delete</mat-icon>
                         </button>
                     </td>
@@ -500,7 +500,7 @@
                     <td>{{item.timestamp}}</td>
                     <td>{{item.year}}</td>
                     <td style="text-align: center;">
-                        <button color="warn" (click)="manage('Dashboard')" mat-mini-fab>
+                        <button color="warn" (click)="deleteuser(item.userID)" mat-mini-fab>
                             <mat-icon>delete</mat-icon>
                         </button>
                     </td>
@@ -593,7 +593,7 @@
                     <td>{{item.shift}}</td>
                     <td>{{item.year}}</td>
                     <td style="text-align: center;">
-                        <button color="warn" (click)="manage('Dashboard')" mat-mini-fab>
+                        <button color="warn" (click)="deleteuser(item.userID)" mat-mini-fab>
                             <mat-icon>delete</mat-icon>
                         </button>
                     </td>
