--- a/src/app/students-nav/students-nav.component.html
+++ b/src/app/students-nav/students-nav.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container   class="sidenav-container">
+<mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
     <mat-toolbar>
@@ -17,12 +17,12 @@
 
         <p mat-list-item>
           <mat-icon class="i" matPrefix>computer</mat-icon>
-          Final Year Project
+          Notifications
         </p>
 
         <p mat-list-item>
           <mat-icon class="i" matPrefix>person</mat-icon>
-          Student Queries
+          another
         </p>
 
         <p mat-list-item>
