--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container   class="sidenav-container">
+<mat-sidenav-container *ngIf="user && user=='Admin'" class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
     <mat-toolbar>
