--- a/src/app/createuserform/createuserform.component.html
+++ b/src/app/createuserform/createuserform.component.html
@@ -57,7 +57,7 @@
 
         <mat-form-field *ngIf="data.user=='Student'" class="field" color="primary" appearance="outline">
 
-            <mat-label>Choose one</mat-label>
+            <mat-label>Choose shift</mat-label>
             <mat-icon matPrefix>track_changes</mat-icon>
             <mat-select matNativeControl [(ngModel)]="choosedShit">
                 <mat-option *ngFor="let item of shifts" [value]="item">{{item}}</mat-option>
@@ -66,6 +66,19 @@
             </mat-hint>
 
         </mat-form-field>
+
+        <mat-form-field *ngIf="data.user=='Student'" class="field" color="primary" appearance="outline">
+
+            <mat-label>Choose batch</mat-label>
+            <mat-icon matPrefix>batch_prediction</mat-icon>
+            <mat-select matNativeControl [(ngModel)]="choosedbatch">
+                <mat-option *ngFor="let item of batches" [value]="item">{{item}}</mat-option>
+            </mat-select>
+            <mat-hint *ngIf="error=='batch'" style="font-family: Roboto;color: rgba(255, 0, 0, 0.733);">{{errormsg}}
+            </mat-hint>
+
+        </mat-form-field>
+
 
     </div>
 
