--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container *ngIf="user && user=='Admin'" class="sidenav-container">
+<mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
     <mat-toolbar>
@@ -8,8 +8,26 @@
       <h3 class="mukta">
         UIIT Automation
       </h3>
-   
-      <div class="lists">
+
+      <div *ngIf="user && user=='Student'" class="lists">
+        <p mat-list-item>
+          <mat-icon class="i" matPrefix>dashboard</mat-icon>
+          Group Formation
+        </p>
+
+        <p mat-list-item>
+          <mat-icon class="i" matPrefix>dashboard</mat-icon>
+          Group Formation
+        </p>
+
+        <p mat-list-item>
+          <mat-icon class="i" matPrefix>person</mat-icon>
+          Student Queries
+        </p>
+
+      </div>
+
+      <div *ngIf="user && user=='Admin'" class="lists">
         <p mat-list-item>
           <mat-icon class="i" matPrefix>dashboard</mat-icon>
           DASHBOARD
@@ -40,6 +58,7 @@
 
     </mat-nav-list>
   </mat-sidenav>
+
   <mat-sidenav-content>
     <mat-toolbar class="toolbar" color="none">
       <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
