--- a/src/app/student-dashboard/student-dashboard.component.scss
+++ b/src/app/student-dashboard/student-dashboard.component.scss
@@ -5,20 +5,114 @@
 }
 
 .card {
-   
     position: relative;
-    border:1px solid rgb(194, 11, 118)
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
-.center{
+.center {
     text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, "Times New Roman", Times, serif;
     font-weight: 700;
 }
-.flex{
+.flex {
     padding-top: 10px;
     display: flex;
     justify-content: space-between;
 }
-.select{
+.select {
     width: 25em;
+}
+
+.loader {
+    width: 150px;
+    height: 550px;
+    display: inline-block;
+    padding: 0px;
+    opacity: 0.5;
+    border: 3px solid #09acfd;
+    -webkit-animation: loader 1s ease-in-out infinite alternate;
+    animation: loader 1s ease-in-out infinite alternate;
+}
+
+.loader:before {
+    content: " ";
+    position: absolute;
+    z-index: -1;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    border: 3px solid #09acfd;
+}
+
+.loader:after {
+    content: " ";
+    position: absolute;
+    z-index: -1;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    border: 3px solid #09acfd;
+}
+
+@keyframes loader {
+    from {
+        transform: rotate(0deg) scale(1, 1);
+        border-radius: 0px;
+    }
+    to {
+        transform: rotate(360deg) scale(0, 0);
+        border-radius: 50px;
+    }
+}
+@-webkit-keyframes loader {
+    from {
+        -webkit-transform: rotate(0deg) scale(1, 1);
+        border-radius: 0px;
+    }
+    to {
+        -webkit-transform: rotate(360deg) scale(0, 0);
+        border-radius: 50px;
+    }
+}
+
+.loader5 {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid #4183d7;
+    border-top: 10px solid #f5ab35;
+    -webkit-animation: loader5 1.2s ease-in-out infinite alternate;
+    animation: loader5 1.2s ease-in-out infinite alternate;
+}
+
+@keyframes loader5 {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(720deg);
+    }
+}
+@-webkit-keyframes loader5 {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(720deg);
+    }
+}
+
+.cell {
+    position: relative;
+    top: 20em;
+    left: 40em;
+}
+.fieldone {
+    width: 1000px;
+    input {
+        height: 180px;
+    }
 }
