--- a/src/app/student-querries/student-querries.component.html
+++ b/src/app/student-querries/student-querries.component.html
@@ -1,3 +1,22 @@
 <app-main-nav>
 
+    <div class="card-wrap card-2">
+
+        <div class="card card-2">
+
+
+        </div>
+
+        <div class="card card-2">
+
+
+        </div>
+
+        <div class="card card-2">
+
+
+        </div>
+
+    </div>
+
 </app-main-nav>
