--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,6 @@ body {
 .mukta {
     font-family: "Mukta", sans-serif;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
