--- a/src/app/student-dashboard/student-dashboard.component.scss
+++ b/src/app/student-dashboard/student-dashboard.component.scss
@@ -17,6 +17,8 @@
     padding-top: 10px;
     display: flex;
     justify-content: space-between;
+    margin: 3px 2px 5px;
+    border-radius: 2px;
 }
 .select {
     width: 25em;
