--- a/src/app/student-querries/student-querries.component.html
+++ b/src/app/student-querries/student-querries.component.html
@@ -1,38 +1,40 @@
 <app-main-nav>
 
-    <div class="card-wrap card-2">
+  <div class="card-wrap card-2">
 
-        <div class="card card-2">
-          <h1>Aplication</h1>
-          
-  <input type="file" id="myfile" name="myfile"><br><br>
-          <div class="text-center">
-            <button style="width:7em" type="submit" class="btn btn-primary">Submit</button>
-        </div>
+    <div style="width: 40%;padding: 20px;" class="card card-2">
+      <h1>Aplication</h1>
 
+      <input (change)="selectFile($event)" type="file" id="myfile" name="myfile"><br><br>
+      <div class="text-center">
+        <button (click)="addQuerry('Application')" style="width:7em" type="submit"
+          class="btn btn-primary">Submit</button>
+      </div>
 
-        </div>
-
-        <div class="card card-2">
-          <h1>Certificate</h1>
-          <input type="file" id="myfile" name="myfile"><br><br>
-          <div class="text-center">
-            <button style="width:7em" type="submit" class="btn btn-primary">Submit</button>
-        </div>
-
-        </div>
-
-        <div class="card card-2">
-          <h1>Letter</h1>
-          <input type="file" id="myfile" name="myfile"><br><br>
-          <div class="text-center">
-            <button style="width:7em" type="submit" class="btn btn-primary">Submit</button>
-        </div>
-        </div>
 
     </div>
-    <div>
+
+    <div style="width: 40%;padding: 20px;" class="card card-2">
+      <h1>Certificate</h1>
+      <input (change)="selectFile($event)" type="file" id="myfile" name="myfile"><br><br>
+      <div class="text-center">
+        <button (click)="addQuerry('Certificate')" style="width:7em" type="submit"
+          class="btn btn-primary">Submit</button>
+      </div>
 
     </div>
+
+    <div style="width: 100%;padding: 20px;" class="card card-2">
+      <h1>Letter</h1>
+      <input (change)="selectFile($event)" type="file" id="myfile" name="myfile"><br><br>
+      <div class="text-center">
+        <button (click)="addQuerry('Letter')" style="width:7em" type="submit" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+
+  </div>
+  <div>
+
+  </div>
 
 </app-main-nav>
